--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,7 +47,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 flutter_icons:
-  image_path: "assets/images/icon.ico"
+  image_path: "assets/images/StimICO2.png"
   android: true
   ios: true
 # For information on the generic Dart part of this file, see the
